# nodemod-goldsrc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build-docker.sh  build-node.sh  build-nodemod.sh  dmesg.txt  nodemod.lds  package.json  run-docker.sh
scripts/: build-node-dual-arch.sh  build-node-from-source.sh  buildEvents.js  customs.js  extract_ham_keynames.py  fat_archive.sh  fileMaker.js  generator-original.js  generator-refactored.js  generator.js  hamParamNames.js  hamParser.js  hookCallbacksGenerator.js  package-release.sh  update-node.sh  validate_ham_keynames.py  validate_ham_mappings.py
src/auto/: dll_events.cpp  dll_functions.cpp  engine_events.cpp  engine_functions.cpp
src/bindings/: bindings.cpp  functions.cpp  players.cpp
src/ham/: gamedata.cpp  gamedata.h  ham_bindings.cpp  ham_bindings.h  ham_const.h  ham_manager.cpp  ham_manager.h  hook.cpp  hook.h  hook_callbacks.cpp  hook_callbacks.h  trampoline.cpp  trampoline.h
src/lib/: meta_api.cpp
src/node/: events.cpp  events.hpp  nodeimpl.cpp  nodeimpl.hpp  resource.cpp  resource.hpp  utils.hpp
src/structures/: clientdata.cpp  common_macros.hpp  customization.cpp  cvar.cpp  delta.cpp  entity.cpp  entitystate.cpp  entvars.cpp  keyvaluedata.cpp  netadr.cpp  playermove.cpp  saverestoredata.cpp  structures.hpp  trace_result.cpp  typedescription.cpp  usercmd.cpp  weapondata.cpp
src/util/: convert.hpp
